c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@tenjin_slices.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/tenjin_slices.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
#[unsafe(no_mangle)]
pub unsafe extern "C" fn inc(mut x: &[u8]) {
    x = &x[1..];
}
#[unsafe(no_mangle)]
pub unsafe extern "C" fn get(mut x: &[u8], mut i: ::core::ffi::c_int) -> ::core::ffi::c_uchar {
    return x[i as usize];
}
